@@ -171,7 +171,10 @@ map."))
 	     (w3m-region p (point-max)
 			 (and (stringp xref)
 			      (string-match "\\`http://" xref)
-			      xref))
+			      xref)
+			 (mime-content-type-parameter
+			  (mime-entity-content-type entity)
+			  "charset"))
 	     (add-text-properties p (point-max)
 				  (nconc (mime-w3m-local-map-property)
 					 '(text-rendered-by-mime-w3m t))))
