@@ -1,3 +1,8 @@
+2003-07-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* mime-w3m.el (mime-w3m-preview-text/html): Call `w3m-region' with
+	`charset' option.
+
 2003-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-goto-url): Use `w3m-url-strip-fragment' instead of
